--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5WDeTlaawCi4nS3MxYsGjfRbjZAlbnz1hbTbkA98iaQ=
+APP_KEY=base64:0KsjAWSj6XbiQ0OnDjWEFMYRnrJxHPlUzLxGcrWPomk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -32,7 +32,8 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=localhost
+SESSION_SECURE_COOKIE=true
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
